Виправив помилки вказані в 2-ох скрінах.

--- a/index.html
+++ b/index.html
@@ -27,29 +27,27 @@
     <!-- Главный контент -->
     <main>
         <!-- Герои -->
-        <div>
-            <section>
+        <section>
                 <h1>Эффективные решения для вашего бизнеса</h1>
                 <button type="button">Заказать услугу</button>
-            </section>
-        </div>
+        </section>
         <!-- Наши преимущества -->
         <section>
             <!-- h2 будет невидимым чере CSS -->
             <h2>Наши преимущества</h2>
             <ul>
                 <li>
-                    <b>ВНИМАНИЕ К ДЕТАЛЯМ</b>
+                    <h3>ВНИМАНИЕ К ДЕТАЛЯМ</h3>
                     <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
-                    <b>ПУНКТУАЛЬНОСТЬ</b>
+                    <h3>ПУНКТУАЛЬНОСТЬ</h3>
                     <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
-                <li><b>ПЛАНИРОВАНИЕ</b>
+                <li><h3>ПЛАНИРОВАНИЕ</h3>
                     <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
-                <li><b>СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</b>
+                <li><h3>СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
                     <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
@@ -88,19 +86,14 @@
     </main>
     <!-- Подвал -->
     <footer>
-        <!-- Адрес -->
-        <section>
-            <!-- h2 будет невидимым чере CSS -->
-            <h2>Адрес</h2>
-            <a href="index.html">WebStudio</a>
-            <address>г. Киев, пр-т Леси Украинки, 26</address>
+        <a href="index.html">WebStudio</a>
             <address>
+                <p>г. Киев, пр-т Леси Украинки, 26</p>
                 <ul>
                     <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                     <li><a href="tel:+380961111111">+380961111111</a></li>
                 </ul>
             </address>
-        </section>
     </footer>
 </body>
 
